--- a/API/RestaurantOpeningApi/RestaurantOpeningApi.Test/RestaurantOpeningApi.Test.csproj
+++ b/API/RestaurantOpeningApi/RestaurantOpeningApi.Test/RestaurantOpeningApi.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.29" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
