--- a/API/RestaurantOpeningApi/RestaurantOpeningApi/Properties/launchSettings.json
+++ b/API/RestaurantOpeningApi/RestaurantOpeningApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger", //swagger
-      "applicationUrl": "https://localhost:7222;http://localhost:5063",
+      "applicationUrl": "http://localhost:7222;http://localhost:5063",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
